More re-work of the cluster synchronization and cluster testing.
git-svn-id: http://ikube.googlecode.com/svn/trunk@745 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -41,7 +41,7 @@ faq.predicate=where faq.faqid < 10000000 and published = 1
 patient.predicate=where patient.id > 0
 files.path=./code/core/src/test/resources/data/files
 files.path.million=D:/apache-tomcat-6.0.26
-files.excluded.pattern=.*(.svn).*|.*(database).*|.*(.gif).*|.*(.svg).*|.*(.jpg).*|.*(.exe).*|.*(.dll).*|.*(.dtd).*|.*(.jsp).*|.*(Personal).*
+files.excluded.pattern=.*(.svn).*|.*(.db).*|.*(.gif).*|.*(.svg).*|.*(.jpg).*|.*(.exe).*|.*(.dll).*
 internet.excluded.pattern=.*(.zip).*|.*(.png).*|.*(/search).*|.*(/images).*|.*(wiki).*|.*(r=).*|.*(.war).*
 
 
@@ -68,6 +68,7 @@ ikube.google.code=http://code.google.com/p/ikube/
 h2.jdbc.userid=sa
 h2.jdbc.password=
 h2.jdbc.url=jdbc:h2:file:ikube
+#jdbc:h2:tcp://localhost/~/ikube
 h2.jdbc.driver=org.h2.Driver
 
 # The DB2 database credentials
@@ -96,26 +97,38 @@ jdbc.unreturnedConnectionTimeout=120000
 
 # H2 database, this is for distribution and production. This 
 # database is what ikube will use in the field
-#ikube.dataSource=nonXaDataSourceH2
-#ikube.persistenceUnit=IkubePersistenceUnitH2
-#ikube.dataSourceType=H2
-#ikube.jdbc.userid=${h2.jdbc.userid}
-#ikube.jdbc.password=
-#ikube.jdbc.url=${h2.jdbc.url}
-#ikube.jdbc.driver=${h2.jdbc.driver}
-#ikube.jdbc.dictionary=h2(batchLimit=1000)
-#ikube.dataBaseClass=ikube.database.jpa.DataBaseJpa
+ikube.dataSource=nonXaDataSourceH2
+ikube.persistenceUnit=IkubePersistenceUnitH2
+ikube.dataSourceType=H2
+ikube.jdbc.userid=${h2.jdbc.userid}
+ikube.jdbc.password=
+ikube.jdbc.url=${h2.jdbc.url}
+ikube.jdbc.driver=${h2.jdbc.driver}
+ikube.jdbc.dictionary=h2(batchLimit=1000)
+ikube.dataBaseClass=ikube.database.jpa.DataBaseJpa
 
 # Db2 database, this database is for testing essentially as
 # there is always an instance running on the server
-ikube.dataSource=nonXaDataSourceDb2
-ikube.persistenceUnit=IkubePersistenceUnitDb2
-ikube.dataSourceType=DB2
-ikube.jdbc.userid=${db2.jdbc.userid}
-ikube.jdbc.password=${db2.jdbc.password}
-ikube.jdbc.url=${db2.jdbc.url}
-ikube.jdbc.driver=${db2.jdbc.driver}
-ikube.jdbc.dictionary=db2(batchLimit=1000)
-ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaDb2
+#ikube.dataSource=nonXaDataSourceDb2
+#ikube.persistenceUnit=IkubePersistenceUnitDb2
+#ikube.dataSourceType=DB2
+#ikube.jdbc.userid=${db2.jdbc.userid}
+#ikube.jdbc.password=${db2.jdbc.password}
+#ikube.jdbc.url=${db2.jdbc.url}
+#ikube.jdbc.driver=${db2.jdbc.driver}
+#ikube.jdbc.dictionary=db2(batchLimit=1000)
+#ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaDb2
+
+# Oracle database, this database is for testing essentially as
+# there is always an instance running on the server
+#ikube.dataSource=nonXaDataSourceOracle
+#ikube.persistenceUnit=IkubePersistenceUnitOracle
+#ikube.dataSourceType=ORACLE
+#ikube.jdbc.userid=${oracle.jdbc.userid}
+#ikube.jdbc.password=${oracle.jdbc.password}
+#ikube.jdbc.url=${oracle.jdbc.url}
+#ikube.jdbc.driver=${oracle.jdbc.driver}
+#ikube.jdbc.dictionary=oracle(batchLimit=1000)
+#ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaOracle
 
 activemq.port=61616
