--- a/code/core/src/main/resources/META-INF/client/spring.properties
+++ b/code/core/src/main/resources/META-INF/client/spring.properties
@@ -1,3 +1,5 @@
 ############################
 ## This file should be modified by clients ##
 ############################
+
+patient.predicate=where id < 16277303
