Re-worked the cluster synchronization logic using Jms(ActiveMQ). Seems to be stable. Ready for a release.
git-svn-id: http://ikube.googlecode.com/svn/trunk@746 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -3,7 +3,7 @@
 #################################
 
 # Maximum age of the indexes defined in minutes
-max.age=6000
+max.age=120
 
 # These parameters are destined for the index context
 buffer.size=256
@@ -54,7 +54,7 @@ delay=600000
 # The period between notifications for timed tasks
 period=60000
 # The maximum age of the GeoSpatial index
-max.age.geospatial=6000
+max.age.geospatial=180
 
 
 # These parameters are for the Ikube documentation index
@@ -68,6 +68,7 @@ ikube.google.code=http://code.google.com/p/ikube/
 h2.jdbc.userid=sa
 h2.jdbc.password=
 h2.jdbc.url=jdbc:h2:file:ikube
+#jdbc:h2:file:ikube
 #jdbc:h2:tcp://localhost/~/ikube
 h2.jdbc.driver=org.h2.Driver
 
@@ -132,3 +133,4 @@ ikube.dataBaseClass=ikube.database.jpa.DataBaseJpa
 #ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaOracle
 
 activemq.port=61616
+activemq.destination=composite.destination
