Updated the configuration, added a zip extraction in the file handler and the version info to the front end.
git-svn-id: http://ikube.googlecode.com/svn/trunk@747 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/build.xml
+++ b/code/war/build.xml
@@ -14,12 +14,12 @@
 			<param name="tomcat.bin" value="${tomcat.2.bin}" />
 			<param name="tomcat.home" value="${tomcat.2}" />
 		</antcall>
-		<sleep seconds="${sleep}" />
+		<!-- sleep seconds="${sleep}" />
 		<antcall target="executeTomcatAction">
 			<param name="action" value="start" />
 			<param name="tomcat.bin" value="${tomcat.3.bin}" />
 			<param name="tomcat.home" value="${tomcat.3}" />
-		</antcall>
+		</antcall -->
 	</target>
 	<target name="stop.tomcat.cluster">
 		<antcall target="executeTomcatAction">
@@ -132,5 +132,5 @@
 			<arg value="file:${database.dir}/${database.name}" />
 		</java>
 	</target>
-
+	
 </project>
