Re-factoring the cleaner threads into schedules.
git-svn-id: http://ikube.googlecode.com/svn/trunk@748 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -7,7 +7,7 @@ max.age=180
 
 # These parameters are destined for the index context
 buffer.size=256
-compound.file=false
+compound.file=true
 merge.factor=1000
 buffered.docs=1000
 max.field.length=1000
