--- a/code/war/build.xml
+++ b/code/war/build.xml
@@ -3,7 +3,7 @@
 	<property file="build.properties" />
 
 	<target name="start.tomcat.cluster">
-		<antcall target="executeTomcatAction">
+		<!-- antcall target="executeTomcatAction">
 			<param name="action" value="start" />
 			<param name="tomcat.bin" value="${tomcat.1.bin}" />
 			<param name="tomcat.home" value="${tomcat.1}" />
@@ -13,7 +13,7 @@
 			<param name="action" value="start" />
 			<param name="tomcat.bin" value="${tomcat.2.bin}" />
 			<param name="tomcat.home" value="${tomcat.2}" />
-		</antcall>
+		</antcall -->
 		<!-- sleep seconds="${sleep}" />
 		<antcall target="executeTomcatAction">
 			<param name="action" value="start" />
