--- a/code/war/src/main/webapp/WEB-INF/web.xml
+++ b/code/war/src/main/webapp/WEB-INF/web.xml
@@ -4,8 +4,10 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xmlns="http://java.sun.com/xml/ns/javaee"
 	xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
-                             http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	
+	xsi:schemaLocation="
+		http://java.sun.com/xml/ns/javaee
+        http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
    	id="WebApp_ID"
 	version="2.5">
 
@@ -22,13 +24,11 @@
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>
-			/WEB-INF/spring/web-application-context.xml
-        </param-value>
+		<param-value>/WEB-INF/spring/web-application-context.xml</param-value>
 	</context-param>
 
 	<servlet>
-		<servlet-name>core</servlet-name>
+		<servlet-name>springDispatcherServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
@@ -36,20 +36,9 @@
 		</init-param>
 	</servlet>
 
-	<servlet>
-		<servlet-name>SearchServlet</servlet-name>
-		<servlet-class>ikube.web.servlet.SearchServlet</servlet-class>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
-
 	<servlet-mapping>
-		<servlet-name>core</servlet-name>
+		<servlet-name>springDispatcherServlet</servlet-name>
 		<url-pattern>*.html</url-pattern>
-	</servlet-mapping>
-
-	<servlet-mapping>
-		<servlet-name>SearchServlet</servlet-name>
-		<url-pattern>/SearchServlet</url-pattern>
 	</servlet-mapping>
 
 	<welcome-file-list>
