--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -7,7 +7,7 @@ max.age=180
 
 # These parameters are destined for the index context
 buffer.size=256
-compound.file=true
+compound.file=false
 merge.factor=1000
 buffered.docs=1000
 max.field.length=1000
@@ -42,7 +42,7 @@ patient.predicate=where patient.id > 0
 files.path=./code/core/src/test/resources/data/files
 files.path.million=D:/apache-tomcat-6.0.26
 files.excluded.pattern=.*(.svn).*|.*(.db).*|.*(.gif).*|.*(.svg).*|.*(.jpg).*|.*(.exe).*|.*(.dll).*|.*(password).*
-internet.excluded.pattern=.*(.zip).*|.*(.png).*|.*(/search).*|.*(/images).*|.*(wiki).*|.*(r=).*|.*(.war).*
+internet.excluded.pattern=.*(.zip).*|.*(.png).*|.*(/search).*|.*(/images).*|.*(wiki).*|.*(r=).*|.*(.war).*|.*(terminate).*
 
 
 ################################################
