--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -134,3 +134,10 @@ ikube.dataBaseClass=ikube.database.jpa.DataBaseJpa
 
 activemq.port=61616
 activemq.destination=composite.destination
+
+searcher.web.service.port=8081
+searcher.web.service.path=/ikube/service/SearcherWebService?wsdl
+monitor.web.service.port=8082
+monitor.web.service.path=/ikube/service/MonitorWebService?wsdl
+
+searcher.web.service.url=http://ikube.dyndns.org:${searcher.web.service.port}${searcher.web.service.path}
