--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -42,7 +42,7 @@ patient.predicate=where patient.id > 0
 files.path=./code/core/src/test/resources/data/files
 files.path.million=D:/apache-tomcat-6.0.26
 files.excluded.pattern=.*(.svn).*|.*(.db).*|.*(.gif).*|.*(.svg).*|.*(.jpg).*|.*(.exe).*|.*(.dll).*|.*(password).*
-internet.excluded.pattern=.*(.zip).*|.*(.png).*|.*(/search).*|.*(/images).*|.*(wiki).*|.*(r=).*|.*(.war).*|.*(terminate).*
+internet.excluded.pattern=.*(.zip).*|.*(.png).*|.*(/search).*|.*(/images).*|.*(wiki).*|.*(r=).*|.*(.war).*|.*(terminate).*|.*(startup).*
 
 
 ################################################
@@ -60,6 +60,7 @@ max.age.geospatial=180
 # These parameters are for the Ikube documentation index
 ikube.url=http://localhost/ikube/index.html
 ikube.url.8080=http://localhost:8080/ikube
+ikube.url.8080.login=${ikube.url.8080}/admin/login.html
 ikube.url.9000=http://localhost:9000/ikube/index.html
 ikube.url.dyndns=http://ikube.dyndns.org:8080/ikube/index.html
 ikube.google.code=http://code.google.com/p/ikube/
@@ -67,7 +68,7 @@ ikube.google.code=http://code.google.com/p/ikube/
 # The H2 database credentials
 h2.jdbc.userid=sa
 h2.jdbc.password=
-h2.jdbc.url=jdbc:h2:file:ikube
+h2.jdbc.url=jdbc:h2:file:ikube;DB_CLOSE_ON_EXIT=FALSE
 #jdbc:h2:file:ikube
 #jdbc:h2:tcp://localhost/~/ikube
 h2.jdbc.driver=org.h2.Driver
