--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -51,8 +51,8 @@
 				<artifactId>maven-failsafe-plugin</artifactId>
 				<version>2.6</version>
 				<configuration>
-					<forkMode>once</forkMode>
-					<argLine>-javaagent:../../serenity/serenity.jar ${memory.parameters} ${serenity.parameters}</argLine>
+					<forkMode>never</forkMode>
+					<!-- <argLine>-javaagent:../../serenity/serenity.jar ${memory.parameters} ${serenity.parameters}</argLine> -->
 					<includes>
 						<include>**/*Integration*.java</include>
 					</includes>
@@ -85,65 +85,6 @@
 					</execution>
 				</executions>
 			</plugin>
-			<!-- This plugin starts a Jetty server before the integration tests and stops it after the integration tests. It can also be used to start 
-				a jetty server from the command line for testing. -->
-			<plugin>
-				<groupId>org.mortbay.jetty</groupId>
-				<artifactId>maven-jetty-plugin</artifactId>
-				<version>6.1.25</version>
-				<configuration>
-					<stopKey>stop</stopKey>
-					<stopPort>9090</stopPort>
-					<scanIntervalSeconds>10000</scanIntervalSeconds>
-					<contextPath>/ikube</contextPath>
-					<scanTargets>
-						<scanTarget>src/main/resources</scanTarget>
-						<scanTarget>src/main/webapp</scanTarget>
-					</scanTargets>
-					<connectors>
-						<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
-							<port>9080</port>
-							<maxIdleTime>60000</maxIdleTime>
-						</connector>
-					</connectors>
-				</configuration>
-				<executions>
-					<!-- <execution>
-						<id>start-jetty</id>
-						<phase>pre-integration-test</phase>
-						<goals>
-							<goal>run</goal>
-						</goals>
-						<configuration>
-							<daemon>true</daemon>
-						</configuration>
-					</execution>
-					<execution>
-						<id>stop-jetty</id>
-						<phase>post-integration-test</phase>
-						<goals>
-							<goal>stop</goal>
-						</goals>
-					</execution> -->
-				</executions>
-				<dependencies>
-					<dependency>
-						<!-- XXX It is included to force commons-logging to use 2.5 API instead of 2.3. This caused by internal dependencies of Jetty, which use 
-							version 2.5, but have it packaged in a different group ID: org.mortbay.jetty. TODO (Roman): If it gets broken again, try to "exclude" servlet-api 
-							dependencies from commons-logging and commons-fileupload. -->
-						<groupId>javax.servlet</groupId>
-						<artifactId>servlet-api</artifactId>
-						<version>2.5</version>
-						<scope>compile</scope>
-					</dependency>
-					<dependency>
-						<groupId>commons-logging</groupId>
-						<artifactId>commons-logging</artifactId>
-						<version>1.1</version>
-						<type>jar</type>
-					</dependency>
-				</dependencies>
-			</plugin>
 			<!-- This plugin runs an Ant script after the integration tests to deploy ikube.war to the cluster. The cluster directories are also cleaned, 
 				all the wars and exploded directories are deleted before the deploy. It will also start the Tomcats in the cluster. -->
 			<plugin>
@@ -174,6 +115,7 @@
 								<!-- Try calling the Tomcats and shut them down. -->
 								<echo message="Turning off cluster : " />
 								<ant antfile="build.xml" target="stop.tomcat.cluster" inheritrefs="true" />
+								<ant antfile="build.xml" target="unpack.configuration" inheritrefs="true" />
 							</target>
 						</configuration>
 						<goals>
@@ -206,6 +148,65 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<!-- This plugin starts a Jetty server before the integration tests and stops it after the integration tests. It can also be used to start 
+				a jetty server from the command line for testing. -->
+			<plugin>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>maven-jetty-plugin</artifactId>
+				<version>6.1.25</version>
+				<configuration>
+					<stopKey>stop</stopKey>
+					<stopPort>9090</stopPort>
+					<scanIntervalSeconds>10000</scanIntervalSeconds>
+					<contextPath>/ikube</contextPath>
+					<scanTargets>
+						<scanTarget>src/main/resources</scanTarget>
+						<scanTarget>src/main/webapp</scanTarget>
+					</scanTargets>
+					<connectors>
+						<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
+							<port>9080</port>
+							<maxIdleTime>60000</maxIdleTime>
+						</connector>
+					</connectors>
+				</configuration>
+				<executions>
+					<execution>
+						<id>start-jetty</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+						<configuration>
+							<daemon>true</daemon>
+						</configuration>
+					</execution>
+					<execution>
+						<id>stop-jetty</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>stop</goal>
+						</goals>
+					</execution>
+				</executions>
+				<dependencies>
+					<dependency>
+						<!-- XXX It is included to force commons-logging to use 2.5 API instead of 2.3. This caused by internal dependencies of Jetty, which use 
+							version 2.5, but have it packaged in a different group ID: org.mortbay.jetty. TODO (Roman): If it gets broken again, try to "exclude" servlet-api 
+							dependencies from commons-logging and commons-fileupload. -->
+						<groupId>javax.servlet</groupId>
+						<artifactId>servlet-api</artifactId>
+						<version>2.5</version>
+						<scope>compile</scope>
+					</dependency>
+					<dependency>
+						<groupId>commons-logging</groupId>
+						<artifactId>commons-logging</artifactId>
+						<version>1.1</version>
+						<type>jar</type>
+					</dependency>
+				</dependencies>
 			</plugin>
 			<!-- This plugin will upload the artifacts to Google code, making them available for download. Unfortunately this can't run in the deploy 
 				phase because the artifacts are still SNAPSHOTS, which is not what is required as a download. -->
