Fixed the integration tests, running a Jetty embedded now for the UI tests to follow.
git-svn-id: http://ikube.googlecode.com/svn/trunk@758 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -68,7 +68,8 @@ ikube.google.code=http://code.google.com/p/ikube/
 # The H2 database credentials
 h2.jdbc.userid=sa
 h2.jdbc.password=
-h2.jdbc.url=jdbc:h2:file:ikube;DB_CLOSE_ON_EXIT=FALSE
+h2.jdbc.url=jdbc:h2:file:ikube
+#;DB_CLOSE_ON_EXIT=FALSE
 #jdbc:h2:file:ikube
 #jdbc:h2:tcp://localhost/~/ikube
 h2.jdbc.driver=org.h2.Driver
