--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -77,13 +77,13 @@ h2.jdbc.driver=org.h2.Driver
 # The DB2 database credentials
 db2.jdbc.userid=db2admin
 db2.jdbc.password=db2admin
-db2.jdbc.url=jdbc:db2://ikube.dyndns.org:50000/ikube
+db2.jdbc.url=jdbc:db2://ikube:50000/ikube
 db2.jdbc.driver=com.ibm.db2.jcc.DB2Driver
 
 # The Oracle database credentials
 oracle.jdbc.userid=XE
 oracle.jdbc.password=admin
-oracle.jdbc.url=jdbc:oracle:thin:@//ikube.dyndns.org:1521/XE
+oracle.jdbc.url=jdbc:oracle:thin:@//ikube:1521/XE
 oracle.jdbc.driver=oracle.jdbc.driver.OracleDriver
 
 #General JDBC settings
@@ -142,4 +142,4 @@ searcher.web.service.path=/ikube/service/SearcherWebService?wsdl
 monitor.web.service.port=8082
 monitor.web.service.path=/ikube/service/MonitorWebService?wsdl
 
-searcher.web.service.url=http://ikube.dyndns.org:${searcher.web.service.port}${searcher.web.service.path}
+searcher.web.service.url=http://ikube:${searcher.web.service.port}${searcher.web.service.path}
