Re-factoring and test cleaning.
git-svn-id: http://ikube.googlecode.com/svn/trunk@761 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/build.xml
+++ b/code/war/build.xml
@@ -112,15 +112,11 @@
 
 		<replace dir="${tomcat.2.bin}" value="61617">
 			<include name="**/spring.properties" />
-			<replacetoken>
-				<![CDATA[61616]]>
-			</replacetoken>
+			<replacetoken><![CDATA[61616]]></replacetoken>
 		</replace>
 		<replace dir="${tomcat.3.bin}" value="61618">
 			<include name="**/spring.properties" />
-			<replacetoken>
-				<![CDATA[61616]]>
-			</replacetoken>
+			<replacetoken><![CDATA[61616]]></replacetoken>
 		</replace>
 	</target>
 
