Changing the monitoring interceptor.
git-svn-id: http://ikube.googlecode.com/svn/trunk@763 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/build.properties
+++ b/code/war/build.properties
@@ -20,6 +20,10 @@ tomcat.1.bin=${tomcat.1}/bin
 tomcat.2.bin=${tomcat.2}/bin
 tomcat.3.bin=${tomcat.3}/bin
 
+jboss.1=${cluster.directory}/jboss-4.2.2.GA
+jboss.1.bin=${jboss.1}/bin
+jboss.1.deploy=${jboss.1}/server/default/deploy
+
 jenkins.home=D:/apache-tomcat-6.0.26
 jenkins.bin=${jenkins.home}/bin
 
