Re-factored the performance monitor.
git-svn-id: http://ikube.googlecode.com/svn/trunk@769 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/client/spring.properties
+++ b/code/core/src/main/resources/META-INF/client/spring.properties
@@ -1,3 +1,8 @@
 ############################
 ## This file should be modified by clients ##
 ############################
+
+postgres.jdbc.userid=cmp
+postgres.jdbc.password=pwd
+postgres.jdbc.driver=org.postgresql.Driver
+postgres.jdbc.url=jdbc:postgresql://localhost:5432/cmp
