--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -29,10 +29,10 @@ not.stored=false
 vectored=true
 
 # The number of threads for each indexing component/connector
-table.handler.threads=1
-internet.handler.threads=1
-filesystem.handler.threads=1
-email.handler.threads=1
+table.handler.threads=3
+internet.handler.threads=3
+filesystem.handler.threads=3
+email.handler.threads=3
 
 # These parameters are client specific
 url=http://ikokoon.ikube.cloudbees.net/index.html
@@ -76,13 +76,13 @@ h2.jdbc.driver=org.h2.Driver
 # The DB2 database credentials
 db2.jdbc.userid=db2admin
 db2.jdbc.password=db2admin
-db2.jdbc.url=jdbc:db2://ikube.dyndns.org:50000/ikube
+db2.jdbc.url=jdbc:db2://ikube:50000/ikube
 db2.jdbc.driver=com.ibm.db2.jcc.DB2Driver
 
 # The Oracle database credentials
 oracle.jdbc.userid=XE
 oracle.jdbc.password=admin
-oracle.jdbc.url=jdbc:oracle:thin:@//ikube.dyndns.org:1521/XE
+oracle.jdbc.url=jdbc:oracle:thin:@//ikube:1521/XE
 oracle.jdbc.driver=oracle.jdbc.driver.OracleDriver
 
 #General JDBC settings
