--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -68,10 +68,13 @@ ikube.google.code=http://code.google.com/p/ikube/
 h2.jdbc.userid=sa
 h2.jdbc.password=
 h2.jdbc.url=jdbc:h2:file:ikube
+h2.jdbc.driver=org.h2.Driver
+#AUTO_SERVER_PORT=9090;
+#AUTO_SERVER=TRUE;
+#h2.jdbc.url=jdbc:h2:file:ikube
 #;DB_CLOSE_ON_EXIT=FALSE
 #jdbc:h2:file:ikube
 #jdbc:h2:tcp://localhost/~/ikube
-h2.jdbc.driver=org.h2.Driver
 
 # The DB2 database credentials
 db2.jdbc.userid=db2admin
