--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -13,7 +13,7 @@ buffered.docs=100
 max.field.length=100
 max.read.length=10000000
 # \\\\Ikube\\D\\cluster\\apache-tomcat-6.0.29-1\\bin\\indexes
-index.directory.path=D:/cluster/indexes
+index.directory.path=C:/cluster/indexes
 # \\\\Ikube\\D\\cluster\\indexes\\backup
 index.directory.path.backup=${index.directory.path}/backup
 jdbc.batch.size=10000
@@ -40,9 +40,9 @@ url.million=http://localhost:9000/million/adapt.html
 faq.predicate=where faq.faqid < 10000000 and published = 1
 patient.predicate=where patient.id > 0
 files.path=./code/core/src/test/resources/data/files
-files.path.million=D:/apache-tomcat-6.0.26
+files.path.million=C:/apache-tomcat-6.0.26
 files.excluded.pattern=.*(.svn).*|.*(.db).*|.*(.gif).*|.*(.svg).*|.*(.jpg).*|.*(.exe).*|.*(.dll).*|.*(password).*|.*(enwiki-latest-pages-articles).*
-internet.excluded.pattern=.*(.zip).*|.*(.png).*|.*(/search).*|.*(/images).*|.*(wiki).*|.*(r=).*|.*(.war).*|.*(terminate).*|.*(startup).*
+internet.excluded.pattern=.*(.zip).*|.*(.png).*|.*(/search).*|.*(/images).*|.*(r=).*|.*(.war).*|.*(terminate).*|.*(startup).*
 
 ################################################
 ## These properties should generally not be modified by clients               ##
