--- a/code/war/build.properties
+++ b/code/war/build.properties
@@ -5,7 +5,7 @@ sleep=30
 
 target.directory=target
 
-cluster.directory=D:/cluster
+cluster.directory=C:/cluster
 indexes.directory=${cluster.directory}/indexes
 
 tomcat.1=${cluster.directory}/apache-tomcat-6.0.29-1
