Put the internet handler data in memory to improve the performance.
git-svn-id: http://ikube.googlecode.com/svn/trunk@776 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -6,14 +6,14 @@
 max.age=180
 
 # These parameters are destined for the index context
-buffer.size=128
+buffer.size=256
 compound.file=false
-merge.factor=100
-buffered.docs=100
-max.field.length=100
+merge.factor=1000
+buffered.docs=1000
+max.field.length=1000
 max.read.length=10000000
 # \\\\Ikube\\D\\cluster\\apache-tomcat-6.0.29-1\\bin\\indexes
-index.directory.path=C:/cluster/indexes
+index.directory.path=D:/cluster/indexes
 # \\\\Ikube\\D\\cluster\\indexes\\backup
 index.directory.path.backup=${index.directory.path}/backup
 jdbc.batch.size=10000
@@ -36,13 +36,13 @@ email.handler.threads=3
 
 # These parameters are client specific
 url=http://ikokoon.ikube.cloudbees.net/index.html
-url.million=http://localhost:9000/million/adapt.html
+url.million=http://localhost:8080/million/adapt.html
 faq.predicate=where faq.faqid < 10000000 and published = 1
 patient.predicate=where patient.id > 0
 files.path=./code/core/src/test/resources/data/files
-files.path.million=C:/apache-tomcat-6.0.26
+files.path.million=D:/apache-tomcat-6.0.26
 files.excluded.pattern=.*(.svn).*|.*(.db).*|.*(.gif).*|.*(.svg).*|.*(.jpg).*|.*(.exe).*|.*(.dll).*|.*(password).*|.*(enwiki-latest-pages-articles).*
-internet.excluded.pattern=.*(.zip).*|.*(.png).*|.*(/search).*|.*(/images).*|.*(r=).*|.*(.war).*|.*(terminate).*|.*(startup).*
+internet.excluded.pattern=.*(.zip).*|.*(.png).*|.*(/search).*|.*(/images).*|.*(wiki).*|.*(r=).*|.*(.war).*|.*(terminate).*|.*(startup).*
 
 ################################################
 ## These properties should generally not be modified by clients               ##
