--- a/code/war/build.properties
+++ b/code/war/build.properties
@@ -5,7 +5,7 @@ sleep=30
 
 target.directory=target
 
-cluster.directory=C:/cluster
+cluster.directory=D:/cluster
 indexes.directory=${cluster.directory}/indexes
 
 tomcat.1=${cluster.directory}/apache-tomcat-6.0.29-1
@@ -20,9 +20,21 @@ tomcat.1.bin=${tomcat.1}/bin
 tomcat.2.bin=${tomcat.2}/bin
 tomcat.3.bin=${tomcat.3}/bin
 
-jboss.1=${cluster.directory}/jboss-4.2.2.GA
+jboss.1=${cluster.directory}/jboss-as-web-7.0.2.Final
 jboss.1.bin=${jboss.1}/bin
-jboss.1.deploy=${jboss.1}/server/default/deploy
+jboss.1.deploy=${jboss.1}/standalone/deployments
+
+glassfish.1=${cluster.directory}/glassfish3/glassfish
+glassfish.1.bin=${glassfish.1}/bin
+glassfish.1.deploy=${glassfish.1}/domains/domain1/autodeploy
+
+oc4j.1=${cluster.directory}/oc4j
+oc4j.1.bin=${oc4j.1}/bin
+oc4j.1.deploy=${oc4j.1}/j2ee/home/applications
+
+weblogic.1=${cluster.directory}/wlserver/common
+weblogic.1.bin=${weblogic.1}/bin
+weblogic.1.deploy=${weblogic.1}/deployable-libraries
 
 jenkins.home=D:/apache-tomcat-6.0.26
 jenkins.bin=${jenkins.home}/bin
