--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -13,7 +13,7 @@ buffered.docs=1000
 max.field.length=1000
 max.read.length=10000000
 # \\\\Ikube\\D\\cluster\\apache-tomcat-6.0.29-1\\bin\\indexes
-index.directory.path=D:/cluster/indexes
+index.directory.path=C:/cluster/indexes
 # \\\\Ikube\\D\\cluster\\indexes\\backup
 index.directory.path.backup=${index.directory.path}/backup
 jdbc.batch.size=10000
@@ -31,7 +31,7 @@ vectored=true
 # The number of threads for each indexing component/connector
 table.handler.threads=3
 internet.handler.threads=3
-filesystem.handler.threads=1
+filesystem.handler.threads=3
 email.handler.threads=3
 
 # These parameters are client specific
@@ -40,7 +40,7 @@ url.million=http://localhost:8080/million/adapt.html
 faq.predicate=where faq.faqid < 10000000 and published = 1
 patient.predicate=where patient.id > 0
 files.path=./code/core/src/test/resources/data/files
-files.path.million=D:/apache-tomcat-6.0.26
+files.path.million=C:/apache-tomcat-6.0.26
 files.excluded.pattern=.*(.svn).*|.*(.db).*|.*(.gif).*|.*(.svg).*|.*(.jpg).*|.*(.exe).*|.*(.dll).*|.*(password).*|.*(enwiki-latest-pages-articles).*
 internet.excluded.pattern=.*(.zip).*|.*(.png).*|.*(/search).*|.*(/images).*|.*(wiki).*|.*(r=).*|.*(.war).*|.*(terminate).*|.*(startup).*
 
