--- a/code/war/build.properties
+++ b/code/war/build.properties
@@ -5,7 +5,7 @@ sleep=30
 
 target.directory=target
 
-cluster.directory=D:/cluster
+cluster.directory=C:/cluster
 indexes.directory=${cluster.directory}/indexes
 
 tomcat.1=${cluster.directory}/apache-tomcat-6.0.29-1
@@ -36,7 +36,7 @@ weblogic.1=${cluster.directory}/wlserver/common
 weblogic.1.bin=${weblogic.1}/bin
 weblogic.1.deploy=${weblogic.1}/deployable-libraries
 
-jenkins.home=D:/apache-tomcat-6.0.26
+jenkins.home=C:/apache-tomcat-6.0.26
 jenkins.bin=${jenkins.home}/bin
 
 configuration.directory=./target/configuration
