Geospatial testing and fine tuning of the indexes with the geocoded data enrichment.
git-svn-id: http://ikube.googlecode.com/svn/trunk@784 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -32,7 +32,7 @@ vectored=true
 table.handler.threads=3
 internet.handler.threads=3
 filesystem.handler.threads=3
-email.handler.threads=3
+email.handler.threads=1
 
 # These parameters are client specific
 url=http://ikokoon.ikube.cloudbees.net/index.html
@@ -102,27 +102,27 @@ jdbc.unreturnedConnectionTimeout=12000000
 
 # H2 database, this is for distribution and production. This 
 # database is what ikube will use in the field
-ikube.dataSource=nonXaDataSourceH2
-ikube.persistenceUnit=IkubePersistenceUnitH2
-ikube.dataSourceType=H2
-ikube.jdbc.userid=${h2.jdbc.userid}
-ikube.jdbc.password=
-ikube.jdbc.url=${h2.jdbc.url}
-ikube.jdbc.driver=${h2.jdbc.driver}
-ikube.jdbc.dictionary=h2(batchLimit=1000)
-ikube.dataBaseClass=ikube.database.jpa.DataBaseJpa
+#ikube.dataSource=nonXaDataSourceH2
+#ikube.persistenceUnit=IkubePersistenceUnitH2
+#ikube.dataSourceType=H2
+#ikube.jdbc.userid=${h2.jdbc.userid}
+#ikube.jdbc.password=
+#ikube.jdbc.url=${h2.jdbc.url}
+#ikube.jdbc.driver=${h2.jdbc.driver}
+#ikube.jdbc.dictionary=h2(batchLimit=1000)
+#ikube.dataBaseClass=ikube.database.jpa.DataBaseJpa
 
 # Db2 database, this database is for testing essentially as
 # there is always an instance running on the server
-#ikube.dataSource=nonXaDataSourceDb2
-#ikube.persistenceUnit=IkubePersistenceUnitDb2
-#ikube.dataSourceType=DB2
-#ikube.jdbc.userid=${db2.jdbc.userid}
-#ikube.jdbc.password=${db2.jdbc.password}
-#ikube.jdbc.url=${db2.jdbc.url}
-#ikube.jdbc.driver=${db2.jdbc.driver}
-#ikube.jdbc.dictionary=db2(batchLimit=1000)
-#ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaDb2
+ikube.dataSource=nonXaDataSourceDb2
+ikube.persistenceUnit=IkubePersistenceUnitDb2
+ikube.dataSourceType=DB2
+ikube.jdbc.userid=${db2.jdbc.userid}
+ikube.jdbc.password=${db2.jdbc.password}
+ikube.jdbc.url=${db2.jdbc.url}
+ikube.jdbc.driver=${db2.jdbc.driver}
+ikube.jdbc.dictionary=db2(batchLimit=1000)
+ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaDb2
 
 # Oracle database, this database is for testing essentially as
 # there is always an instance running on the server
