--- a/code/war/build.properties
+++ b/code/war/build.properties
@@ -5,12 +5,13 @@ sleep=30
 
 target.directory=target
 
-cluster.directory=C:/cluster
+cluster.directory=D:/cluster
+tomcats.directory=${cluster.directory}/tomcats
 indexes.directory=${cluster.directory}/indexes
 
-tomcat.1=${cluster.directory}/apache-tomcat-6.0.29-1
-tomcat.2=${cluster.directory}/apache-tomcat-6.0.29-2
-tomcat.3=${cluster.directory}/apache-tomcat-6.0.29-3
+tomcat.1=${tomcats.directory}/apache-tomcat-6.0.29-1
+tomcat.2=${tomcats.directory}/apache-tomcat-6.0.29-2
+tomcat.3=${tomcats.directory}/apache-tomcat-6.0.29-3
 
 tomcat.1.webapps=${tomcat.1}/webapps
 tomcat.2.webapps=${tomcat.2}/webapps
@@ -36,7 +37,7 @@ weblogic.1=${cluster.directory}/wlserver/common
 weblogic.1.bin=${weblogic.1}/bin
 weblogic.1.deploy=${weblogic.1}/deployable-libraries
 
-jenkins.home=C:/apache-tomcat-6.0.26
+jenkins.home=D:/apache-tomcat-6.0.26
 jenkins.bin=${jenkins.home}/bin
 
 configuration.directory=./target/configuration
