--- a/code/war/build.xml
+++ b/code/war/build.xml
@@ -63,12 +63,19 @@
 
 	<target name="deploy">
 		<!-- Delete the index directories in the cluster. -->
-		<!-- delete includeemptydirs="true" failonerror="false">
-			<fileset dir="${cluster.directory}/">
-				<include name="**/ikube*.war" />
-				<include name="**/ikube*/**" />
-			</fileset>
-		</delete -->
+		<antcall target="clean.server">
+			<param name="directory" value="${tomcat.1.bin}" />
+		</antcall>
+		<delete includeemptydirs="true" failonerror="false">
+			<fileset dir="${tomcat.1}/webapps/ikube" />
+			<fileset file="${tomcat.1}/webapps/ikube.war" />
+		</delete>
+		<antcall target="clean.server">
+			<param name="directory" value="${tomcat.2}" />
+		</antcall>
+		<antcall target="clean.server">
+			<param name="directory" value="${tomcat.3}" />
+		</antcall>
 		<!-- Deploy the ikube war into the cluster. -->
 		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.1.webapps}" overwrite="true" failonerror="false" />
 		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.2.webapps}" overwrite="true" failonerror="false" />
@@ -79,6 +86,15 @@
 		<copy file="${target.directory}/${ikube.war}" todir="${weblogic.1.deploy}" overwrite="true" failonerror="false" />
 	</target>
 
+	<target name="clean.server">
+		<echo message="${directory}" />
+		<delete includeemptydirs="true" failonerror="false">
+			<fileset dir="${directory}/">
+				<include name="**/ikube*.war" />
+				<include name="**/ikube*/**" />
+			</fileset>
+		</delete>
+	</target>
 	<!-- 
 		This target will copy all the Spring configuration files to a location. Then remove all the classpath 
 		parts of the configuration files as they will be used in an external configuration, and the Spring application 
