Re-wrote the cluster synchronization test.
git-svn-id: http://ikube.googlecode.com/svn/trunk@785 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/build.properties
+++ b/code/war/build.properties
@@ -5,7 +5,7 @@ sleep=30
 
 target.directory=target
 
-cluster.directory=D:/cluster
+cluster.directory=C:/cluster
 tomcats.directory=${cluster.directory}/tomcats
 indexes.directory=${cluster.directory}/indexes
 
