--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -67,7 +67,7 @@ ikube.google.code=http://code.google.com/p/ikube/
 # The H2 database credentials
 h2.jdbc.userid=sa
 h2.jdbc.password=
-h2.jdbc.url=jdbc:h2:file:ikube
+h2.jdbc.url=jdbc:h2:tcp://localhost/~/test
 h2.jdbc.driver=org.h2.Driver
 #AUTO_SERVER_PORT=9090;
 #AUTO_SERVER=TRUE;
@@ -87,6 +87,12 @@ oracle.jdbc.userid=XE
 oracle.jdbc.password=admin
 oracle.jdbc.url=jdbc:oracle:thin:@//ikube:1521/XE
 oracle.jdbc.driver=oracle.jdbc.driver.OracleDriver
+
+# The Postgres database credentials
+postgresql.jdbc.userid=ikube
+postgresql.jdbc.password=ikube
+postgresql.jdbc.url=jdbc:postgresql://localhost:5432/ikube
+postgresql.jdbc.driver=org.postgresql.Driver
 
 #General JDBC settings
 jdbc.minPoolSize=5
@@ -135,6 +141,17 @@ ikube.dataBaseClass=ikube.database.jpa.DataBaseJpa
 #ikube.jdbc.driver=${oracle.jdbc.driver}
 #ikube.jdbc.dictionary=oracle(batchLimit=1000)
 #ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaOracle
+
+# Postgres ikube database
+#ikube.dataSource=nonXaDataSourcePostgres
+#ikube.persistenceUnit=IkubePersistenceUnitPostgres
+#ikube.dataSourceType=POSTGRESQL
+#ikube.jdbc.userid=${postgresql.jdbc.userid}
+#ikube.jdbc.password=${postgresql.jdbc.password}
+#ikube.jdbc.url=${postgresql.jdbc.url}
+#ikube.jdbc.driver=${postgresql.jdbc.driver}
+#ikube.jdbc.dictionary=postgres(batchLimit=1000)
+#ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaPostgres
 
 activemq.port=61616
 activemq.destination=composite.destination
