--- a/code/war/build.properties
+++ b/code/war/build.properties
@@ -5,7 +5,7 @@ sleep=30
 
 target.directory=target
 
-cluster.directory=C:/cluster
+cluster.directory=D:/cluster
 tomcats.directory=${cluster.directory}/tomcats
 indexes.directory=${cluster.directory}/indexes
 
