Cleaning up the package structure and moving classes to the tools module.
git-svn-id: http://ikube.googlecode.com/svn/trunk@787 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/META-INF/common/spring.properties
+++ b/code/core/src/main/resources/META-INF/common/spring.properties
@@ -67,7 +67,7 @@ ikube.google.code=http://code.google.com/p/ikube/
 # The H2 database credentials
 h2.jdbc.userid=sa
 h2.jdbc.password=
-h2.jdbc.url=jdbc:h2:tcp://localhost/~/test
+h2.jdbc.url=jdbc:h2:file:ikube
 h2.jdbc.driver=org.h2.Driver
 #AUTO_SERVER_PORT=9090;
 #AUTO_SERVER=TRUE;
@@ -79,7 +79,7 @@ h2.jdbc.driver=org.h2.Driver
 # The DB2 database credentials
 db2.jdbc.userid=db2admin
 db2.jdbc.password=db2admin
-db2.jdbc.url=jdbc:db2://ikube:50000/ikube
+db2.jdbc.url=jdbc:db2://ikube:50000/ikube_3
 db2.jdbc.driver=com.ibm.db2.jcc.DB2Driver
 
 # The Oracle database credentials
